# Stock-Prices-Streaming

./: .gitignore  CMakeLists.txt  README.md  main.c  python_server.py
include/: fetch_data_utils.h  json_utils.h  latency_utils.h  memory_utils.h  server_utils.h
scripts/: build.bat  build_and_run.bat  run.bat
src/: fetch_data_utils.c  json_utils.c  latency_utils.c  memory_utils.c  server_utils.c
